Fix text wrapping

--- a/src/components/Toast/Toast.scss
+++ b/src/components/Toast/Toast.scss
@@ -6,4 +6,5 @@
   background-color: rgba($secondary, 0.85);
   margin: 10px 0;
   text-align: center;
+  white-space: nowrap;
 }
